# KLASSEN-SNMP

./: Cargo.toml  Dockerfile  README.md
profiles/: generic-endpoint.yaml
src/: main.rs  snmp.rs
src/collector/: device_info.rs  mod.rs  scalar_collector.rs  table_collector.rs  types.rs
src/config/: mod.rs  profile.rs  settings.rs
src/formatter/: json.rs  mod.rs
src/handlers/: health.rs  mod.rs  snmp.rs
src/models/: mod.rs  snmpv2c.rs
src/routes/: mod.rs  router.rs
src/snmp/: clients_enum.rs  device_profiles.rs  mod.rs  oid.rs  snmp.rs  v2c.rs  v3.rs
