[package]
name = "hello-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
# SNMP клиент
snmp2 = { version = "0.4.14", features = ["tokio", "v3"] }

# Async runtime
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

# Конфиг (YAML)
serde = { version = "1.0", features = ["derive"] }
serde_yml = "0.0.12"

# CLI и аргументы
clap = { version = "4", features = ["derive"] } 

# Вывод результата
serde_json = "1"

# Ошибки
anyhow = "1"
